fixed: header alignment and header

--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,10 @@ html, body {
 }
 
 .header-container{
-    background-color: red;
+    background-color: #F55F5A;
     display: flex;
     justify-content: center;
+    align-items: center;
     height: 55px;
 }
 
@@ -15,7 +16,6 @@ html, body {
     color: #FFFFFF;
     margin-left: 7px;
     font-size: 14.5px;
-    margin-top: 18px;
 }
 
 .header-container > img {
